--- a/index.html
+++ b/index.html
@@ -5,6 +5,35 @@
     <link rel="icon" type="image/svg+xml" href="/logoBlack.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Массаж Гродно</title>
+
+    <!-- Google tag (gtag.js) -->
+    <!--    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JX5ERB9TTJ"></script>-->
+    <!--    <script>-->
+    <!--        window.dataLayer = window.dataLayer || [];-->
+    <!--        function gtag(){dataLayer.push(arguments);}-->
+    <!--        gtag('js', new Date());-->
+
+    <!--        gtag('config', 'G-JX5ERB9TTJ');-->
+    <!--    </script>-->
+
+    <!-- SEO Meta Tags -->
+    <meta name="keywords"
+          content="массаж Гродно, массажист Александра, классический массаж гродно, массаж лица гродно, расслабляющий массаж гродно, антицеллюлитный массаж гродно, лимфодренажный массаж гродно, медовый массаж гродно, баночный массаж гродно, спортивный массаж гродно, абонементы и сертификаты на массаж гродно"/>
+    <meta name="description"
+          content="Массаж в Гродно от Александры: классический, расслабляющий, антицеллюлитный, лимфодренажный, карбокситерапия и другие. Записывайтесь на массаж уже сегодня!"/>
+
+
+    <!--    <meta name="google-site-verification" content="sImHKAgwEkng7-yfP43KspOHkAthtLjtgjXUPzgnhdE"/>-->
+
+    <!-- Open Graph Tags for Social Media Sharing -->
+    <!--    <meta property="og:title" content="NV-massage"/>-->
+    <meta property="og:description" content="Профессиональные услуги массажа от массажиста Александры в Гродно"/>
+    <meta property="og:image" content="/logoBlack.svg"/>
+    <!--    <meta property="og:url" content="https://nv-massage.by/"/>-->
+
+    <!--    <meta name="yandex-verification" content="5bba7a4cf8533b65" />-->
+
+
 </head>
 <body>
 <div id="root"></div>
